@@ -116,6 +116,7 @@ struct TcpStats
     PegCount trackers_released;
     PegCount segs_queued;
     PegCount segs_released;
+    PegCount segs_split;
     PegCount segs_used;
     PegCount rebuilt_packets;
     PegCount rebuilt_buffers;
@@ -144,6 +145,7 @@ const char* tcp_pegs[] =
     "trackers released",
     "segs queued",
     "segs released",
+    "segs split",
     "segs used",
     "rebuilt packets",
     "rebuilt buffers",
@@ -3200,6 +3202,7 @@ static int DupStreamNode(Packet *p,
     if ( !ss )
         return STREAM_INSERT_FAILED;
 
+    tcpStats.segs_split++;
     ss->data = ss->pkt + (left->data - left->pkt);
     ss->orig_dsize = left->orig_dsize;
 
@@ -5905,6 +5908,13 @@ static inline uint32_t flush_pdu_ips (
         if ( flush_pt > 0 )
         {
             MODULE_PROFILE_END(s5TcpPAFPerfStats);
+#if 0
+            // for non-paf splitters, flush_pt > 0 means we reached
+            // the minimum required, but we flush what is available 
+            // instead of creating more, but smaller, packets
+            if ( !trk->splitter->is_paf() && avail > flush_pt )
+                return avail;
+#endif
             return flush_pt;
         }
         seg = seg->next;
@@ -6061,6 +6071,17 @@ static inline uint32_t flush_pdu_ackd (
         if ( flush_pt > 0 )
         {
             MODULE_PROFILE_END(s5TcpPAFPerfStats);
+#if 0
+            // for non-paf splitters, flush_pt > 0 means we reached
+            // the minimum required, but we flush what is available 
+            // instead of creating more, but smaller, packets
+            if ( !trk->splitter->is_paf() )
+            {
+                uint32_t avail = get_q_footprint(trk);
+                if ( avail > flush_pt )
+                    return avail;
+            }
+#endif
             return flush_pt;
         }
         seg = seg->next;
